--- a/WebRoot/fontassets/css/style.css
+++ b/WebRoot/fontassets/css/style.css
@@ -1,3 +1,4 @@
+#iconDivMain{display:none;}
 .products_Category {
 	width: 238px;
 	border: solid 1px #ccc;
@@ -192,16 +193,23 @@
 
 
 .cardlist.largecard{
+	overflow: hidden;
 	width:1238px;
 	letter-spacing: -4px;
 }
+
 .cardlist{
 	overflow:hidden;
 	margin-bottom:-38px;
 	font-size: 0;
+	
+	
 }
 .cardlist.largecard .carditem{
+
 	margin-right: 20px;
+	display: inline;
+	display:inline-block;
 }
 .cardlist .carditem {
 letter-spacing: normal;
