可以付款了

--- a/WebRoot/fontassets/css/jumei.css
+++ b/WebRoot/fontassets/css/jumei.css
@@ -1120,7 +1120,7 @@ body {
     font: 20px/30px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
 #cboxClose{position:absolute; top:12px; right:0px; text-align:right; width:50px; padding-right: 20px ;margin-right: 15px; color:#999;
-    font: 20px/30px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif; background: url(/assets/images/css_pics/i/sprite.png) no-repeat 54px 7px
+    font: 20px/30px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif; background: url(../img/cart_pop_close.png) no-repeat 54px 7px
 }
 #cboxClose:hover{
     color: #FF9900;
