--- a/WebRoot/fontassets/css/jumei_cart_new.css
+++ b/WebRoot/fontassets/css/jumei_cart_new.css
@@ -2456,7 +2456,7 @@ td.item-buy-total {
     background:none;
 }
 #cart .cart_left #gateway_list .gateway_ul_box{
-    border-top:1px solid #d5d5d5;
+
     margin-top:15px;
     overflow:hidden;
 }
@@ -2464,7 +2464,7 @@ td.item-buy-total {
     display: none;
 }
 #cart .cart_left .gateway_list li{
-    padding: 10px 15px;
+    padding-top: 10px;
 }
 #cart .cart_left .gateway_list .g_ul{
     padding-bottom: 50px;
