--- a/WebRoot/fontassets/css/style.css
+++ b/WebRoot/fontassets/css/style.css
@@ -16,7 +16,7 @@
 
 .products_Category h2 a {
 	color: #fff;
-	text-decoration: none
+	text-decoration: none;
 }
 
 .products_Category ul {
@@ -274,147 +274,16 @@ color: #333;
 margin-bottom: 16px;
 font-weight: bold;
 }
-.commodity-price {
-position: absolute;
-right: 0;
-bottom: 0;
-line-height: 1;
-padding: 8px 12px;
-color: #fff;
-background: #b9b9b9;
-background: rgba(185,185,185,0.65);
-}
-.card-story-large .card-actions .btn-doulist:hover {
-color: #fff;
-background: #d8442b;
-background-image: -webkit-linear-gradient(bottom,#962412,#a83725 7%,#c15848 92%,#d06b5b);
-background-image: -moz-linear-gradient(bottom,#962412,#a83725 7%,#c15848 92%,#d06b5b);
-background-image: -ms-linear-gradient(bottom,#962412,#a83725 7%,#c15848 92%,#d06b5b);
-background-image: -o-linear-gradient(bottom,#962412,#a83725 7%,#c15848 92%,#d06b5b);
-background-image: linear-gradient(bottom,#962412,#a83725 7%,#c15848 92%,#d06b5b);
-}
-.card-story .card-actions .btn-doulist, .card-story-large .card-actions .btn-doulist, .card-story .card-actions .btn-doulist:link, .card-story-large .card-actions .btn-doulist:link, .card-story .card-actions .btn-doulist:visited, .card-story-large .card-actions .btn-doulist:visited {
-color: #fff;
-background: #db5140;
-background: rgba(219,81,64,0.9);
-background-image: -webkit-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: -moz-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: -ms-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: -o-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-}
-.card-story .card-actions .btn-doulist, .card-story-large .card-actions .btn-doulist, .card-story .card-actions .btn-doulist:link, .card-story-large .card-actions .btn-doulist:link, .card-story .card-actions .btn-doulist:visited, .card-story-large .card-actions .btn-doulist:visited {
-color: #fff;
-text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
-background-color: #faa732;
-background-image: -moz-linear-gradient(top,#fbb450,#f89406);
-background-image: -webkit-gradient(linear,0 0,0 100%,from(#fbb450),to(#f89406));
-background-image: -webkit-linear-gradient(top,#fbb450,#f89406);
-background-image: -o-linear-gradient(top,#fbb450,#f89406);
-background-image: linear-gradient(to bottom,#fbb450,#f89406);
-background-repeat: repeat-x;
-border-color: #f89406 #f89406 #ad6704;
-border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffbb450',endColorstr='#fff89406',GradientType=0);
-filter: progid:DXImageTransform.Microsoft.gradient(
-}
-.card-story .card-actions .btn-doulist, .card-story-large .card-actions .btn-doulist, .card-story .card-actions .btn-doulist:link, .card-story-large .card-actions .btn-doulist:link, .card-story .card-actions .btn-doulist:visited, .card-story-large .card-actions .btn-doulist:visited {
-color: #fff;
-background: #db5140;
-background: rgba(219,81,64,0.9);
-background-image: -webkit-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: -moz-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: -ms-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: -o-linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-background-image: linear-gradient(bottom,#a02713,#c0341e 7%,#e0614d 92%,#ee6f5b);
-}
-.card-story .card-actions .btn-doulist, .card-story-large .card-actions .btn-doulist {
-font-size: 12px;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
-border-radius: 4px;
-padding: 13px 17px 12px;
-line-height: 1;
-}
-.card-story .card-actions .btn-doulist, .card-story-large .card-actions .btn-doulist, .card-story .card-actions .btn-carditem-like, .card-story-large .card-actions .btn-carditem-like {
-pointer-events: auto;
-}
-.btn-doulist:active, .btn-doulist:hover {
-color: #fff;
-background-color: #d8442b;
-}
-.btn-doulist:link, .btn-doulist:visited {
-color: #fff;
-background-color: #de533c;
-}
-.btn-doulist:link, .btn-doulist:visited {
-color: #fff;
-background-color: #de533c;
-}
-a:active, a:hover {
-color: #7f4b2f;
-background: 0;
-}
-.card-story .card-actions .btn-carditem-like:link, .card-story-large .card-actions .btn-carditem-like:link, .card-story .card-actions .btn-carditem-like:visited, .card-story-large .card-actions .btn-carditem-like:visited, .card-story .card-actions .btn-carditem-like, .card-story-large .card-actions .btn-carditem-like, .card-story .card-actions .btn-carditem-like:active, .card-story-large .card-actions .btn-carditem-like:active, .card-story .card-actions .btn-carditem-like:hover, .card-story-large .card-actions .btn-carditem-like:hover {
-color: #484848;
-background: #fff;
-background-image: -webkit-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -moz-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -ms-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -o-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-}
-.card-story .card-actions .btn-carditem-like:link, .card-story-large .card-actions .btn-carditem-like:link, .card-story .card-actions .btn-carditem-like:visited, .card-story-large .card-actions .btn-carditem-like:visited, .card-story .card-actions .btn-carditem-like, .card-story-large .card-actions .btn-carditem-like, .card-story .card-actions .btn-carditem-like:active, .card-story-large .card-actions .btn-carditem-like:active, .card-story .card-actions .btn-carditem-like:hover, .card-story-large .card-actions .btn-carditem-like:hover {
-color: #484848;
-background: #fff;
-background-image: -webkit-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -moz-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -ms-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -o-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-}
-.card-story .card-actions .btn-carditem-like:link, .card-story-large .card-actions .btn-carditem-like:link, .card-story .card-actions .btn-carditem-like:visited, .card-story-large .card-actions .btn-carditem-like:visited, .card-story .card-actions .btn-carditem-like, .card-story-large .card-actions .btn-carditem-like, .card-story .card-actions .btn-carditem-like:active, .card-story-large .card-actions .btn-carditem-like:active, .card-story .card-actions .btn-carditem-like:hover, .card-story-large .card-actions .btn-carditem-like:hover {
-color: #484848;
-background: #fff;
-background-image: -webkit-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -moz-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -ms-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: -o-linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-background-image: linear-gradient(bottom,#babbbb,#dedede 9%,#efefef 96%,#f1f2f4);
-}
-.card-story .card-actions .btn-carditem-like, .card-story-large .card-actions .btn-carditem-like {
-float: right;
-padding: 8px 14px;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
-border-radius: 4px;
-line-height: 16px;
-}
-.card-story .card-actions .btn-doulist, .card-story-large .card-actions .btn-doulist, .card-story .card-actions .btn-carditem-like, .card-story-large .card-actions .btn-carditem-like {
-pointer-events: auto;
-}
+
+
+
+
+
 .card-story-large .card-actions {
 padding: 20px 25px;
 z-index: 2;
 }
-.card-story .card-actions, .card-story-large .card-actions {
-display: none;
-}
-.card-story .card-actions, .card-story-large .card-actions {
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-padding: 12px;
-overflow: hidden;
-pointer-events: none;
-}
-body, div, dl, dt, dd, ul, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, blockquote {
-margin: 0;
-padding: 0;
-}
+
 
 .story-info .info-pinglun{float:left; color:#c6c6c6; margin-top:18px;}
 .story-info .info-xiaoliang{float:right; color:#c6c6c6; margin-top:18px;}
@@ -423,6 +292,50 @@ padding: 0;
 
 
 
-
-
-
+.card-extra{
+	position: absolute;
+	width: 100%;
+	height: 0;;
+	top: 0;
+	left: 0;
+}
+.card-actions:after{
+	content: " ";
+	display: table;
+	clear: both;
+}
+.btn-doulist{
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+	background-color: #faa732;
+	display:inline-block;
+	font-size: 14px;
+	line-hieght:20px;
+	vertical-align: middle;
+	cursor:pointer;
+	box-shadow:inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+	padding: 4px 10px;
+}
+.btn-doulist:hover{
+	text-decoration: none;
+}
+.btn-carditem-like{
+	float:right;
+	color: #faa732;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+	background-color: #fff;
+	display:inline-block;
+	font-size: 14px;
+	line-hieght:20px;
+	vertical-align: middle;
+	cursor:pointer;
+	box-shadow:inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+	padding: 4px 10px;
+}
+.story-info{
+	position: absolute;
+	bottom: 10px;
+}
+.card-extra{
+	display:none;
+}
